--- a/style.css
+++ b/style.css
@@ -30,6 +30,13 @@ input, select {
 }
 
 /* Form related styles */
+.title {
+    margin-bottom: 5rem;
+    color: #4E5150;
+    font-weight: 600;
+    font-size: 2.2rem;
+}
+
 .checkout-form-container {
     margin: 2rem 0 0 7rem;
 }
@@ -63,6 +70,17 @@ input, select {
     /* justify-content: center; */
 }
 
+
 .checkbox label {
     margin-bottom: 0;
+}
+
+/* button related styles */
+.btn-primary {
+    margin-top: 1.5rem;
+    padding: 0.8rem 2rem;
+    border-radius: 12px;
+    background: #F2994A;
+    color: #fff;
+    border: none;
 }
