--- a/style.css
+++ b/style.css
@@ -101,11 +101,13 @@ input, datalist {
     border-radius: 12px;
     background:#F2F2F2;
     margin-top: 10rem;
+    max-width: 390px;
+    max-height: 535px;
 }
 
 .vintage-bag, .card {
     display: flex;
-    padding: 2rem;
+    padding: 1rem;
 }
 
 .vintage-img {
@@ -117,7 +119,7 @@ input, datalist {
     display: flex;
     gap: 1rem;
     align-items: center;
-    margin-top: 1rem;
+    margin-top: 0.7rem;
 }
 
 .discount-price {
@@ -142,9 +144,27 @@ input, datalist {
 
 #quantity {
     /* padding: 1rem 2rem; */
-    padding: 1rem 0.8rem;
+    padding: 0.5rem 0.8rem;
     /* position: relative; */
-    margin-top: 3rem;
+    margin-top: 1rem;
     font-size: 1rem;
 }
 
+/* total amount: footer related styles */
+.total-amount {
+    margin-top: 2rem;
+    padding: 2rem;
+}
+
+.shipping, .total {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1.5rem;
+    color: #4E5150;
+}
+
+.shipping {
+    border-top: 1px solid rgb(175, 175, 175);
+    border-bottom: 1px solid rgb(176, 176, 176);
+    padding: 1rem 0rem;
+}
