--- a/style.css
+++ b/style.css
@@ -5,9 +5,6 @@
 }
 
 /* shared styles */
-label, input {
-    display: block;
-}
 
 label {
     color: #4F4F4F;
@@ -17,16 +14,23 @@ label {
     margin-right: 0;
 }
 
-input, datalist {
-    padding: 1rem 15rem 1rem 1rem;
+input, datalist{
+    padding: 1rem 15rem 1rem 2.5rem;
     /* width: 30%; */
     border-radius: 12px;
     border: 1px solid #828282;
     margin-right: 0;
 }
 
+.fa {
+    position: absolute;
+    margin: 2.5rem 0 0 1rem;
+}
+
 .input-box {
     margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .main-container {
@@ -72,7 +76,8 @@ input, datalist {
 .checkbox {
     display: flex;
     align-items: center;
-    gap: 0.8rem;
+    gap: 0.5rem;
+    margin-top: 2rem;
     /* justify-content: center; */
 }
 
